--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,28 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+  --font-color: #F1B2CE;
+  --bg-page-img: url(../images/cover-image-dark.png);
+  --bg-accent-color: #FF0070;
+
+
+  --font-color-title: #DB00FF;
+  --text-shadow-title: 4px 4px 0px #FF0070;
+  --border-color: #FF0070;
+  --border-color-hover: rgba(255, 0, 112, 0.40);
+}
+
+@media(prefers-color-scheme: dark) {
+  :root {
+    --font-color: #F1B2CE;
+    --bg-page-img: url(../images/cover-image-dark.png);
+    --bg-accent-color: #FF0070;
+
+
+    --font-color-title: #DB00FF;
+    --text-shadow-title: 4px 4px 0px #FF0070;
+    --border-color: #FF0070;
+    --border-color-hover: rgba(255, 0, 112, 0.40);
+  }
 }
