--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,28 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+  --font-color: #353430;
+  --bg-page-img: url(../images/cover-image-light.png);
+  --bg-accent-color: #FF8DCB;
+
+
+  --font-color-title: #FFC2E6;
+  --text-shadow-title: 4px 4px 0px #FF8DCB;
+  --border-color: #353430;
+  --border-color-hover: rgba(50, 49, 45, 0.40);
+}
+
+@media(prefers-color-scheme: light) {
+  :root {
+    --font-color: #353430;
+    --bg-page-img: url(../images/cover-image-light.png);
+    --bg-accent-color: #FF8DCB;
+
+
+    --font-color-title: #FFC2E6;
+    --text-shadow-title: 4px 4px 0px #FF8DCB;
+    --border-color: #353430;
+    --border-color-hover: rgba(50, 49, 45, 0.40);
+  }
 }
