--- a/styles/light.css
+++ b/styles/light.css
@@ -34,3 +34,9 @@
     --border-color-hover: rgba(50, 49, 45, 0.40);
   }
 }
+
+@media(prefers-color-scheme: light) {
+  .decoration-element{
+    appearance: none;
+  }
+}
