--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-color: var(--bg-page-color);
-  margin: 10px;
+  padding: 10px;
   font-family: "IBM Plex mono", sans-serif ;
   
 }
@@ -18,17 +18,18 @@ content: '';
 display: block;
 width:25px ;
 height: 25px;
-border-top:1px solid #000;
-border-right:1px solid #000;
+border-top:1px solid var(--border-color);
+border-right:1px solid var(--border-color);
 position: absolute;
 top:10px;
 right: 10px;
 }
 
 .header__theme-menu-list {
-  margin: 65px 0 65px 285px;
+  margin: 72px 0 0 285px;
   display: grid;
-  justify-content: end;
+  justify-content: center;
+  align-items: center;
   gap: 13px;
   grid-template-columns: repeat(1, minmax(70px,70px));
 }
@@ -58,12 +59,12 @@ right: 10px;
 
 
 .title {
-  font-size: var(--font-size-title);
+font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+line-height: 83%;
   color: var(--font-color-title);
   text-shadow: var(--text-shadow-title);
-  font-size: var(--font-size-title);
-  margin-block-start: 65px;
-  margin-block-end: 55px;
+  margin-block-start: 55px;
+  margin-block-end: 40px;
 }
 
 .description{
@@ -71,6 +72,7 @@ right: 10px;
   margin-block-end: 106px;
   background-color: var(--bg-accent-color);
   font-weight: 700;
+  line-height: 23.4px; 
 }
 
 .description::after{
@@ -78,20 +80,19 @@ content: '';
 display: block;
 width:25px ;
 height: 25px;
-border-bottom:1px solid #000;
-border-left:1px solid #000;
+border-bottom:1px solid var(--border-color);
+border-left:1px solid var(--border-color);
 position: absolute;
 top: 148px;
 
 }
 
 .question{
-  font-family: var(--font-family);
   color: var(--font-color);
   font-size: 1rem;
   font-weight: 700;
   margin-block-start:20px ;
-
+  line-height: 130%; 
 }
 
 .main__point{
@@ -99,6 +100,7 @@ background-color: var(--bg-accent-color);
 font-size: 1rem;
 margin-block-start:20px ;
 margin-block-end:10px ;
+line-height: 23.4px; 
 }
 
 .advise{
