--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
   grid-template-columns: repeat(1, 1fr);
 }
 
-.decorated-zone::before {
+.header.decorated-zone::before {
   content: '';
   display: block;
   width: 25px;
@@ -35,7 +35,7 @@
   right: 0;
 }
 
-.decorated-zone::after {
+.header.decorated-zone::after {
   content: '';
   display: block;
   width: 25px;
@@ -90,12 +90,12 @@
   width: 100%;
 }
 
-.constant-layout{
+.constant-layout {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
 
-.changable-layout{
+.changable-layout {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
 }
@@ -117,13 +117,13 @@
   line-height: 23.4px;
 }
 
-.text{
-font-size: 1.125rem;
-line-height:23.4px ;
-margin: 0;
+.text {
+  font-size: 1.125rem;
+  line-height: 23.4px;
+  margin: 0;
 }
 
- .normal-text{
+.normal-text {
   font-weight: normal;
 }
 
@@ -135,13 +135,35 @@ margin: 0;
   margin-block-end: 20px;
 }
 
-.pictures{
+.pictures {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  gap: 10px;
+}
+
+.picture {
+  width: 100%;
+}
+
+.pictures .picture:last-of-type{
+
+  margin-block-end: 40px;
 }
 
 
+.question-and-main-point{
+  margin-block-start: 50px;
+  margin-block-end: 10px;
+  background-color: var(--bg-accent-color);
+  font-weight: 700;
+  font-size: 1.125rem;
+}
 
-.constant-layout:last-of-type .text:last-child {
-  margin: 30px 0 0 0;
-} 
+.footer {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: 700;
+  line-height: 83%;
+  color: var(--font-color-title);
+  text-shadow: var(--text-shadow-title);
+  margin: 286px 0;
+}
