adaptiv for main1

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,6 +13,7 @@
   --font-color: #F1B2CE;
   --bg-page-img: url(../images/cover-image-dark.png);
   --bg-accent-color: #FF0070;
+  --border-color: #FF0070;
 
 
   --font-color-title: #DB00FF;
