--- a/styles/light.css
+++ b/styles/light.css
@@ -13,6 +13,7 @@
   --font-color: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
   --bg-accent-color: #FF8DCB;
+  --border-color: #353430;
 
 
   --font-color-title: #FFC2E6;
@@ -26,6 +27,7 @@
     --font-color: #353430;
     --bg-page-img: url(../images/cover-image-light.png);
     --bg-accent-color: #FF8DCB;
+    --border-color: #353430;
 
 
     --font-color-title: #FFC2E6;
