--- a/styles/style.css
+++ b/styles/style.css
@@ -7,23 +7,49 @@
   background-position: center;
   padding: 10px;
   font-family: "IBM Plex mono", sans-serif;
+  color: var(--font-color);
+  font-size: 1.125rem;
+  line-height: 23.4px;
+}
+
+@media (width>= 728px){
+  .page{
+     padding: 20px;
+  }
+ 
 }
 
 .header {
-  width: 100%;
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
+   container-type:inline-size; 
 }
 
-.header__theme-menu-list {
-  margin: 18% 0 0 80%;
-  display: grid;
-  gap: 11px;
-  grid-template-columns: repeat(1, 1fr);
+.header__theme-menu-list{
+  height: 228px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  gap: 13px;
 }
 
-.header.decorated-zone::before {
+@container (inline-size>=728px){
+  .header__theme-menu-list{
+    height: 443px
+  }
+}
+
+@container (inline-size>=984px){
+  .header__theme-menu-list{
+    height: 300px;
+    flex-direction: row;
+    align-items: start;
+  }
+}
+
+.decorated-zone::before {
   content: '';
   display: block;
   width: 25px;
@@ -35,7 +61,7 @@
   right: 0;
 }
 
-.header.decorated-zone::after {
+.decorated-zone::after {
   content: '';
   display: block;
   width: 25px;
@@ -48,12 +74,18 @@
 }
 
 .header__theme-menu-button {
+  width: 70px ;
+  height: 26px;
   border: none;
   background-color: transparent;
   color: var(--font-color);
   font-size: 1.125rem;
   padding-inline-start: 13px;
   padding-inline-end: 13px;
+}
+
+.header__theme-menu-button_active{
+outline: 1px solid var(--border-color);
 }
 
 .header__theme-menu-button:hover {
@@ -75,95 +107,85 @@
   line-height: 83%;
   color: var(--font-color-title);
   text-shadow: var(--text-shadow-title);
-  margin-block-start: 55px;
-  margin-block-end: 55px;
+}
+
+@container(inline-size>=728px){
+  .title{
+    font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
+  }
+}
+
+.wapper-for-discription{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: end;
+ width: 100%;
 }
 
 .description {
   color: var(--font-color);
   font-size: 1.125rem;
-  position: relative;
-  margin-block-end: 56px;
   background-color: var(--bg-accent-color);
   font-weight: 700;
-  line-height: 23.4px;
-  width: 100%;
 }
 
-.constant-layout {
+@container(inline-size>=728px){
+  .description{
+    width: 50%;
+  }
+}
+
+.main{
+  container-type:inline-size; 
+}
+
+.constant-layout{
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: 1 auto;
+  
 }
 
-.changable-layout {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
+.question{
+  color: var(--font-color);
+font-size: 1.125rem;
+font-weight: 700;
+margin-block-start: 50px;
 }
 
-.question {
+.main__point{
   color: var(--font-color);
   font-size: 1.125rem;
   font-weight: 700;
-  line-height: 130%;
-  margin: 50px 0 0 0;
-}
-
-.main__point {
   background-color: var(--bg-accent-color);
-  font-size: 1.125rem;
-  font-weight: 700;
   margin-block-start: 20px;
   margin-block-end: 10px;
-  line-height: 23.4px;
 }
 
-.text {
-  font-size: 1.125rem;
-  line-height: 23.4px;
+.text{
+  color: var(--font-color);
   margin: 0;
 }
 
-.normal-text {
-  font-weight: normal;
+@container(inline-size>=728px){
+  .constant-layout{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    margin-block-start: 80px;
+    margin-block-end: 80px;
+  }
+
+  .question{
+    margin: 0;
+  }
+
+   .main__point {
+    margin:0 0 10px 0;
+  }
+
+  .text:not(:last-child){
+    margin:0 0 20px 0;
+  }
 }
 
-.advise {
-  background-color: var(--bg-accent-color);
-  font-weight: 700;
-  font-size: 1.125rem;
-  margin-block-start: 20px;
-  margin-block-end: 20px;
-}
-
-.pictures {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 10px;
-}
-
-.picture {
-  width: 100%;
-}
-
-.pictures .picture:last-of-type{
-
-  margin-block-end: 40px;
-}
-
-
-.question-and-main-point{
-  margin-block-start: 50px;
-  margin-block-end: 10px;
-  background-color: var(--bg-accent-color);
-  font-weight: 700;
-  font-size: 1.125rem;
-}
-
-.footer {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  font-weight: 700;
-  line-height: 83%;
-  color: var(--font-color-title);
-  text-shadow: var(--text-shadow-title);
-  margin: 286px 0;
-}
