--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,10 +6,12 @@
   --font-color:#353430;
   --bg-page-img: url(../images/cover-image-light.png);
   --bg-accent-color:#FF8DCB;
+  --border-color: #353430;
 
   
   --font-color-title:#FFC2E6;
   --text-shadow-title: 4px 4px 0px #FF8DCB;
   --border-color:#353430;
   --border-color-hover: rgba(50, 49, 45, 0.40);
+
 }
