--- a/styles/style.css
+++ b/styles/style.css
@@ -13,21 +13,21 @@
   margin: 0;
 }
 
-@media (width>= 728px){
-  .page{
-     padding: 20px;
+@media (width>=728px) {
+  .page {
+    padding: 20px;
   }
- 
+
 }
 
 .header {
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-   container-type:inline-size; 
+  container-type: inline-size;
 }
 
-.header__theme-menu-list{
+.header__theme-menu-list {
   height: 228px;
   display: flex;
   flex-direction: column;
@@ -36,14 +36,14 @@
   gap: 13px;
 }
 
-@container (inline-size>=728px){
-  .header__theme-menu-list{
+@container (inline-size>=728px) {
+  .header__theme-menu-list {
     height: 443px
   }
 }
 
-@container (inline-size>=984px){
-  .header__theme-menu-list{
+@container (inline-size>=984px) {
+  .header__theme-menu-list {
     height: 300px;
     flex-direction: row;
     align-items: start;
@@ -75,7 +75,7 @@
 }
 
 .header__theme-menu-button {
-  width: 70px ;
+  width: 70px;
   height: 26px;
   border: none;
   background-color: transparent;
@@ -85,8 +85,8 @@
   padding-inline-end: 13px;
 }
 
-.header__theme-menu-button_active{
-outline: 1px solid var(--border-color);
+.header__theme-menu-button_active {
+  outline: 1px solid var(--border-color);
 }
 
 .header__theme-menu-button:hover {
@@ -108,20 +108,21 @@ outline: 1px solid var(--border-color);
   line-height: 83%;
   color: var(--font-color-title);
   text-shadow: var(--text-shadow-title);
+  font-weight: 700;
 }
 
-@container(inline-size>=728px){
-  .title{
+@container(inline-size>=728px) {
+  .title {
     font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
   }
 }
 
-.wapper-for-discription{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: end;
- width: 100%;
+.wapper-for-discription {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  width: 100%;
 }
 
 .description {
@@ -131,29 +132,29 @@ align-items: end;
   font-weight: 700;
 }
 
-@container(inline-size>=728px){
-  .description{
+@container(inline-size>=728px) {
+  .description {
     width: 50%;
   }
 }
 
-.main{
-  container-type:inline-size; 
+.main {
+  container-type: inline-size;
 }
 
-.constant-layout{ 
-   display: grid;
+.constant-layout {
+  display: grid;
   grid-template-columns: 1 1fr;
 }
 
-.question{
+.question {
   color: var(--font-color);
-font-size: 1.125rem;
-font-weight: 700;
-margin-block-start: 50px;
+  font-size: 1.125rem;
+  font-weight: 700;
+  margin-block-start: 50px;
 }
 
-.main__point{
+.main__point {
   color: var(--font-color);
   font-size: 1.125rem;
   font-weight: 700;
@@ -162,13 +163,13 @@ margin-block-start: 50px;
   margin-block-end: 10px;
 }
 
-.text{
+.text {
   color: var(--font-color);
   margin: 0;
 }
 
-@container(inline-size>=728px){
-  .constant-layout{
+@container(inline-size>=728px) {
+  .constant-layout {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto;
@@ -177,44 +178,159 @@ margin-block-start: 50px;
     margin-block-end: 80px;
   }
 
-  .question{
+  .question {
     margin: 0;
   }
 
-   .main__point {
-    margin:0 0 10px 0;
+  .main__point {
+    margin: 0 0 10px 0;
   }
 
-  .text:not(:last-child){
-    margin:0 0 20px 0;
+  .text:not(:last-child) {
+    margin: 0 0 20px 0;
   }
-} 
+}
 
-.changable-layout{
+.changable-layout {
   display: grid;
   grid-template-columns: 1fr;
 }
 
-@container(inline-size>=728px){
-  .changable-layout{
+@container(inline-size>=728px) {
+  .changable-layout {
     display: grid;
-    grid-template-rows:auto 1fr;
+    grid-template-rows: auto 1fr;
     gap: 20px;
   }
 
-  .question{
+  .question-wraper {
     width: 30%;
   }
 }
 
-@container(inline-size>=980px){
-  .changable-layout{
+@container(inline-size>=980px) {
+  .changable-layout {
     display: grid;
-    grid-template-columns:1fr 1fr 1fr ;
-   grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
     gap: 20px;
   }
-   .question-wraper{
+
+  .question-wraper {
     grid-column: 1 / span 3;
-  } 
+  }
+}
+
+.advise {
+  color: var(--font-color);
+  font-size: 1.125rem;
+  font-weight: 700;
+  background-color: var(--bg-accent-color);
+  margin-block-start: 20px;
+  margin-block-end: 10px;
+}
+
+.normal-text {
+  font-weight: normal;
+}
+
+@container(inline-size>=728px) {
+  .advise {
+    margin-block-start: 0;
+    margin-block-end: 20px;
+  }
+}
+
+.question-and-main-point {
+  color: var(--font-color);
+  font-size: 1.125rem;
+  font-weight: 700;
+  background-color: var(--bg-accent-color);
+  margin-block-start: 50px;
+  margin-block-end: 10px;
+}
+
+.pictures {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  margin-block-end: 40px;
+}
+
+.pictures__item {
+  width: 100%;
+}
+
+@container(inline-size>=728px) {
+  .question-and-main-point {
+    margin-block-start: 80px;
+    margin-block-end: 20px;
+  }
+
+  .pictures {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    
+  margin-block-end: 60px;
+  }
+
+  .pictures__item:nth-child(1) {
+    grid-column: 1/span 2;
+  }
+
+  .pictures__item:nth-child(2) {
+    grid-column: 3;
+    grid-row: span 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .pictures__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: span 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .pictures__item:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .pictures__item:nth-child(5) {
+    grid-column: 2/span 2;
+  }
+}
+
+
+.footer{
+
+  container-type: inline-size;
+}
+
+.footer__wraper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 647px;
+  padding: 10px;
+}
+
+@container(inline-size>=728px) {
+  .footer__wraper{
+    height: 984px;
+    padding: 20px;
+  }
+}
+
+@container(inline-size>=1004px) {
+  .footer__wraper{
+    height: 728px;
+    padding: 20px;
+  }
 }
