--- a/styles/style.css
+++ b/styles/style.css
@@ -3,14 +3,19 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
   background-image: var(--bg-page-img);
-  background-size: cover;
   background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
   padding: 10px;
   font-family: "IBM Plex mono", sans-serif;
   color: var(--font-color);
   font-size: 1.125rem;
   line-height: 23.4px;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media (width>=728px) {
@@ -50,7 +55,8 @@
   }
 }
 
-.decorated-zone::before {
+.header.decorated-zone::before,
+.footer.decorated-zone::before {
   content: '';
   display: block;
   width: 25px;
@@ -62,7 +68,8 @@
   right: 0;
 }
 
-.decorated-zone::after {
+.header.decorated-zone::after,
+.footer.decorated-zone::after {
   content: '';
   display: block;
   width: 25px;
@@ -73,6 +80,16 @@
   bottom: 0;
   left: 0;
 }
+
+ /* .decoration-element::after{
+content: "REC *";
+width: 100px;
+height: 100px;
+position: absolute;
+top: 0;
+right: 0;
+color: var(--bg-accent-color);
+}   */
 
 .header__theme-menu-button {
   width: 70px;
@@ -100,7 +117,7 @@
 
 .header__theme-menu-button:focus-visible {
   outline-offset: 5px;
-  border-block-end: 1px solid var(--border-color-hover);
+  border-block-end: 1px solid var(--border-color);
 }
 
 .title {
@@ -114,6 +131,7 @@
 @container(inline-size>=728px) {
   .title {
     font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
+    margin-inline-start: -15px;
   }
 }
 
@@ -254,7 +272,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
-  margin-block-end: 40px;
+  margin-block-end: 50px;
 }
 
 .pictures__item {
@@ -272,8 +290,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto auto auto;
     gap: 20px;
-    
-  margin-block-end: 60px;
+
+    margin-block-end: 80px;
   }
 
   .pictures__item:nth-child(1) {
@@ -307,12 +325,12 @@
 }
 
 
-.footer{
+.footer {
 
   container-type: inline-size;
 }
 
-.footer__wraper{
+.footer__wraper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -322,14 +340,14 @@
 }
 
 @container(inline-size>=728px) {
-  .footer__wraper{
+  .footer__wraper {
     height: 984px;
     padding: 20px;
   }
 }
 
 @container(inline-size>=950px) {
-  .footer__wraper{
+  .footer__wraper {
     height: 728px;
     padding: 20px;
   }
