--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,6 @@
   color: var(--font-color);
   font-size: 1.125rem;
   line-height: 23.4px;
-  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,7 +26,7 @@
 }
 
 .header {
-  height: 100%;
+  height: 100vh;
   position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
@@ -156,7 +155,7 @@
 }
 
 .description {
-  color: var(--font-color);
+  color: var(--font-color-description);
   font-size: 1.125rem;
   background-color: var(--bg-accent-color);
   font-weight: 700;
@@ -355,7 +354,7 @@
 
 
 .footer {
-  height: 100%;
+  height: 100vh;
   container-type: inline-size;
 }
 
