--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
 */
 :root {
   --font-color: #353430;
+  --font-color-description: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
   --bg-accent-color: #FF8DCB;
   --border-color: #353430;
