--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@
 }
 
 .header__theme-menu-list {
-  height: 228px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,15 +48,10 @@
   .header {
     margin-block-start: 20px;
   }
-
-  .header__theme-menu-list {
-    height: 443px
-  }
 }
 
 @container (inline-size>=984px) {
   .header__theme-menu-list {
-    height: 300px;
     flex-direction: row;
     align-items: start;
   }
