--- a/styles/style.css
+++ b/styles/style.css
@@ -29,10 +29,10 @@
 .header {
   margin-block-start: 10px;
   height: 100svh;
-  position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   container-type: inline-size;
+  padding-block-end: 40px;
 }
 
 .header__theme-menu-list {
@@ -47,6 +47,7 @@
 @container (inline-size>=728px) {
   .header {
     margin-block-start: 20px;
+    padding-block-end: 60px;
   }
 }
 
@@ -57,8 +58,11 @@
   }
 }
 
-.header.decorated-zone::before,
-.footer.decorated-zone::before {
+.decorated-zone-top{
+  position: relative;
+}
+
+.decorated-zone-top::before {
   content: '';
   display: block;
   width: 25px;
@@ -70,8 +74,11 @@
   right: 0;
 }
 
-.header.decorated-zone::after,
-.footer.decorated-zone::after {
+.decorated-zone-bottom{
+  position: relative;
+}
+
+.decorated-zone-bottom::after {
   content: '';
   display: block;
   width: 25px;
@@ -85,7 +92,6 @@
 
 .decoration-element {
   position: absolute;
-
   top: 0;
   right: 0;
   color: var(--bg-accent-color);
@@ -175,13 +181,13 @@
 .constant-layout {
   display: grid;
   grid-template-columns: 1 1fr;
+  margin-block-start: 10px;
 }
 
 .question {
   color: var(--font-color);
   font-size: 1.125rem;
   font-weight: 700;
-  margin-block-start: 50px;
 }
 
 .main__point {
@@ -221,13 +227,10 @@
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto;
     gap: 20px;
-    margin-block-start: 80px;
+    margin-block-start: 20px;
     margin-block-end: 80px;
   }
 
-  .question {
-    margin: 0;
-  }
 
   .main__point {
     margin: 0 0 10px 0;
@@ -241,6 +244,7 @@
 .changable-layout {
   display: grid;
   grid-template-columns: 1fr;
+  
 }
 
 @container(inline-size>=728px) {
@@ -248,6 +252,7 @@
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 20px;
+    margin-block-end: 80px;
   }
 
   .question-wraper {
