--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@
   background-attachment: fixed;
   background-size: cover;
   width: 100%;
-  padding-inline: 10px;
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 400;
   color: var(--font-color);
@@ -19,20 +18,12 @@
   container-type: inline-size;
 }
 
-@media (width>=728px) {
-  .page {
-    padding-inline: 20px;
-  }
-
-}
-
-.header {
-  margin-block-start: 10px;
+.header{
   height: 100svh;
-  position: relative;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   container-type: inline-size;
+  padding: 10px;
 }
 
 .header__theme-menu-list {
@@ -46,7 +37,7 @@
 
 @container (inline-size>=728px) {
   .header {
-    margin-block-start: 20px;
+    padding: 20px;
   }
 }
 
@@ -57,55 +48,8 @@
   }
 }
 
-.header.decorated-zone::before,
-.footer.decorated-zone::before {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.header.decorated-zone::after,
-.footer.decorated-zone::after {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.decoration-element {
-  position: absolute;
-
-  top: 0;
-  right: 0;
-  color: var(--bg-accent-color);
-}
-
-.decoration-element::after {
-  content: "";
-  display: inline-block;
-  width: 9px;
-  height: 9px;
-  margin-inline-end: 10px;
-  background-color: var(--bg-accent-color);
-  border-radius: 50%;
-  box-shadow: 0px 0px 50px var(--bg-accent-color);
-
-}
-
 .header__theme-menu-button {
   width: 70px;
-  height: 26px;
   border: none;
   background-color: transparent;
   color: var(--font-color);
@@ -114,13 +58,13 @@
   padding-inline-end: 13px;
 }
 
-.header__theme-menu-button_active {
-  outline: 1px solid var(--border-color);
-}
-
 .header__theme-menu-button:hover {
   outline-offset: 1px;
   outline: 1px solid var(--border-color-hover);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--border-color);
 }
 
 .header__theme-menu-button:focus {
@@ -162,26 +106,65 @@
   font-weight: 700;
 }
 
-@container(inline-size>=728px) {
-  .description {
-    width: 50%;
-  }
+.decoration-element {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: var(--bg-accent-color);
+}
+
+.decoration-element::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  margin-inline-end: 10px;
+  background-color: var(--bg-accent-color);
+  border-radius: 50%;
+  box-shadow: 0px 0px 50px var(--bg-accent-color);
+
+}
+
+.header.decorated-zone::before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.header.decorated-zone::after {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 
 .main {
   container-type: inline-size;
+  padding-inline: 10px;
 }
 
 .constant-layout {
   display: grid;
   grid-template-columns: 1 1fr;
+  margin-block-start: 40px;
+  margin-block-end: 50px;
 }
 
 .question {
   color: var(--font-color);
   font-size: 1.125rem;
   font-weight: 700;
-  margin-block-start: 50px;
 }
 
 .main__point {
@@ -224,170 +207,10 @@
     margin-block-start: 80px;
     margin-block-end: 80px;
   }
-
-  .question {
-    margin: 0;
-  }
-
-  .main__point {
-    margin: 0 0 10px 0;
-  }
-
-  .text:not(:last-child) {
-    margin: 0 0 20px 0;
-  }
 }
 
 .changable-layout {
   display: grid;
   grid-template-columns: 1fr;
-}
-
-@container(inline-size>=728px) {
-  .changable-layout {
-    display: grid;
-    grid-template-rows: auto 1fr;
-    gap: 20px;
-  }
-
-  .question-wraper {
-    width: 30%;
-  }
-}
-
-@container(inline-size>=980px) {
-  .changable-layout {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
-    gap: 20px;
-  }
-
-  .question-wraper {
-    grid-column: 1 / span 3;
-  }
-}
-
-.advise {
-  color: var(--font-color);
-  font-size: 1.125rem;
-  font-weight: 700;
-  background-color: var(--bg-accent-color);
-  margin-block-start: 20px;
-  margin-block-end: 10px;
-}
-
-.normal-text {
-  font-weight: normal;
-}
-
-@container(inline-size>=728px) {
-  .advise {
-    margin-block-start: 0;
-    margin-block-end: 20px;
-  }
-}
-
-.question-and-main-point {
-  color: var(--font-color);
-  font-size: 1.125rem;
-  font-weight: 700;
-  background-color: var(--bg-accent-color);
-  margin-block-start: 50px;
-  margin-block-end: 10px;
-}
-
-.pictures {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-  margin-block-end: 50px;
-}
-
-.pictures__item {
-  width: 100%;
-}
-
-@container(inline-size>=728px) {
-  .question-and-main-point {
-    margin-block-start: 80px;
-    margin-block-end: 20px;
-  }
-
-  .pictures {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto auto;
-    gap: 20px;
-
-    margin-block-end: 80px;
-  }
-
-  .pictures__item:nth-child(1) {
-    grid-column: 1/span 2;
-  }
-
-  .pictures__item:nth-child(2) {
-    grid-column: 3;
-    grid-row: span 2;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .pictures__item:nth-child(3) {
-    grid-column: 1;
-    grid-row: span 2;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .pictures__item:nth-child(4) {
-    grid-column: 2;
-    grid-row: 2;
-  }
-
-  .pictures__item:nth-child(5) {
-    grid-column: 2/span 2;
-  }
-}
-
-
-.footer {
-  height: 100svh;
-  container-type: inline-size;
-  margin-block-end: 10px;
-}
-
-.footer__wraper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 647px;
-  padding: 10px;
-}
-
-@container(inline-size>=728px) {
-  .footer {
-    margin-block-end: 20px;
-  }
-
-  .footer__wraper {
-    height: 984px;
-    padding: 20px;
-  }
-}
-
-
-@container(inline-size>=950px) {
-  .footer {
-    margin-block-end: 20px;
-  }
-
-  .footer__wraper {
-    height: 728px;
-    padding: 20px;
-  }
+  
 }
