--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,62 @@
   gap: 13px;
 }
 
+
+.header.decorated-zone::before,
+.footer.decorated-zone::before {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.header.decorated-zone::after,
+.footer.decorated-zone::after {
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
 @container (inline-size>=728px) {
   .header {
     padding: 20px;
   }
+
+  .header.decorated-zone::before{
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--border-color);
+  border-right: 1px solid var(--border-color);
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.header.decorated-zone::after{
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
 }
 
 @container (inline-size>=984px) {
@@ -84,13 +136,6 @@
   font-weight: 700;
 }
 
-@container(inline-size>=728px) {
-  .title {
-    font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
-    margin-inline-start: -15px;
-  }
-}
-
 .wapper-for-discription {
   display: flex;
   flex-direction: column;
@@ -104,6 +149,17 @@
   font-size: 1.125rem;
   background-color: var(--bg-accent-color);
   font-weight: 700;
+}
+
+@container(inline-size>=728px) {
+  .title {
+    font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
+    margin-inline-start: -20px;
+  }
+
+  .description {
+    width: 50%;
+  }
 }
 
 .decoration-element {
@@ -123,30 +179,6 @@
   border-radius: 50%;
   box-shadow: 0px 0px 50px var(--bg-accent-color);
 
-}
-
-.header.decorated-zone::before {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.header.decorated-zone::after {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
 }
 
 .main {
@@ -176,9 +208,9 @@
   margin-block-end: 10px;
 }
 
-.text {
+.text:not(:last-of-type) {
   color: var(--font-color);
-  margin: 0;
+  margin-block-end: 20px;
 }
 
 .link {
@@ -199,18 +231,155 @@
 }
 
 @container(inline-size>=728px) {
+  .main{
+    padding-inline: 20px;
+  }
+
   .constant-layout {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto;
     gap: 20px;
-    margin-block-start: 80px;
+    margin-block-start: 60px;
     margin-block-end: 80px;
+  }
+
+  .main__point{
+    margin-block-start: 0;
   }
 }
 
 .changable-layout {
   display: grid;
   grid-template-columns: 1fr;
-  
+  margin-block-end: 50px;
+}
+
+@container(inline-size>=728px) {
+  .changable-layout {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 20px;
+  }
+
+  .question-wraper {
+    width: 30%;
+  }
+}
+
+@container(inline-size>=980px) {
+  .changable-layout {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    gap: 20px;
+  }
+
+  .question-wraper {
+    grid-column: 1 / span 3;
+  }
+}
+
+.advise {
+  color: var(--font-color);
+  font-size: 1.125rem;
+  font-weight: 700;
+  background-color: var(--bg-accent-color);
+  margin-block-start: 20px;
+  margin-block-end: 10px;
+}
+
+.normal-text {
+  font-weight: normal;
+}
+
+@container(inline-size>=728px) {
+  .advise {
+    margin-block-start: 0;
+    margin-block-end: 20px;
+  }
+}
+
+.question-and-main-point {
+  color: var(--font-color);
+  font-size: 1.125rem;
+  font-weight: 700;
+  background-color: var(--bg-accent-color);
+  margin-block-start: 50px;
+  margin-block-end: 10px;
+}
+
+.pictures {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  margin-block-end: 40px;
+}
+
+.pictures__item {
+  width: 100%;
+}
+
+@container(inline-size>=728px) {
+  .question-and-main-point {
+    margin-block-start: 80px;
+    margin-block-end: 20px;
+  }
+
+  .pictures {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    margin-block-end: 80px;
+  }
+
+  .pictures__item:nth-child(1) {
+    grid-column: 1/span 2;
+  }
+
+  .pictures__item:nth-child(2) {
+    grid-column: 3;
+    grid-row: span 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .pictures__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: span 2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .pictures__item:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .pictures__item:nth-child(5) {
+    grid-column: 2/span 2;
+  }
+}
+
+.footer {
+  container-type: inline-size;
+  margin-block-end: 10px;
+  height: 100svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-inline: 10px;
+  padding-block-end: 10px;
+}
+
+
+@container(inline-size>=728px) {
+  .footer {
+    padding-inline: 20px;
+    padding-block-end: 20px;
+  }
 }
