--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,8 @@
     padding: 20px;
   }
 
-  .header.decorated-zone::before{
+  .header.decorated-zone::before,
+  .footer.decorated-zone::before {
   content: '';
   display: block;
   width: 25px;
@@ -79,7 +80,8 @@
   right: 20px;
 }
 
-.header.decorated-zone::after{
+.header.decorated-zone::after,
+.footer.decorated-zone::after {
   content: '';
   display: block;
   width: 25px;
@@ -154,9 +156,11 @@
 @container(inline-size>=728px) {
   .title {
     font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
-    margin-inline-start: -20px;
   }
 
+  .header .title{
+    margin-inline-start: -20px;
+  }
   .description {
     width: 50%;
   }
@@ -260,6 +264,7 @@
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 20px;
+    margin-block-end: 80px;
   }
 
   .question-wraper {
@@ -331,7 +336,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto auto auto;
     gap: 20px;
-    margin-block-end: 80px;
+    margin-block-end: 60px;
   }
 
   .pictures__item:nth-child(1) {
@@ -366,20 +371,17 @@
 
 .footer {
   container-type: inline-size;
-  margin-block-end: 10px;
   height: 100svh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-inline: 10px;
-  padding-block-end: 10px;
+  padding: 10px;
 }
 
 
 @container(inline-size>=728px) {
   .footer {
-    padding-inline: 20px;
-    padding-block-end: 20px;
+    padding: 20px;
   }
 }
