fix colors in dark theme

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -12,8 +12,10 @@
 
   --font-color: #F1B2CE;
   --font-color-description: #000028;
+  --font-color-question:#FF0070;
   --bg-page-img: url(../images/cover-image-dark.png);
   --bg-accent-color: #FF0070;
+  --button-text-color:#FF0070;
   --border-color: #FF0070;
 
 
