--- a/styles/light.css
+++ b/styles/light.css
@@ -12,9 +12,12 @@
 
   --font-color: #353430;
   --font-color-description: #353430;
+  --font-color-question:#353430;
   --bg-page-img: url(../images/cover-image-light.png);
   --bg-accent-color: #FF8DCB;
+  --button-text-color:#353430;
   --border-color: #353430;
+  
 
 
   --font-color-title: #FFC2E6;
