--- a/styles/dark.css
+++ b/styles/dark.css
@@ -12,10 +12,11 @@
 
   --font-color: #F1B2CE;
   --font-color-description: #000028;
-  --font-color-question:#FF0070;
+  --font-color-question: #FF0070;
   --bg-page-img: url(../images/cover-image-dark.png);
+  --backgraund-color: #000028;
   --bg-accent-color: #FF0070;
-  --button-text-color:#FF0070;
+  --button-text-color: #FF0070;
   --border-color: #FF0070;
 
 
