--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,14 +5,18 @@
 :root {
   --font-color: #353430;
   --font-color-description: #353430;
+  --font-color-question: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
+  --backgraund-color:#FFC2E6;
   --bg-accent-color: #FF8DCB;
+  --button-text-color: #353430;
   --border-color: #353430;
+
 
 
   --font-color-title: #FFC2E6;
   --text-shadow-title: 4px 4px 0px #FF8DCB;
   --border-color: #353430;
   --border-color-hover: rgba(50, 49, 45, 0.40);
-
 }
+
