--- a/styles/light.css
+++ b/styles/light.css
@@ -36,6 +36,7 @@
     --font-color: #353430;
     --font-color-description: #353430;
     --bg-page-img: url(../images/cover-image-light.png);
+    --backgraund-color:#FFC2E6;
     --bg-accent-color: #FF8DCB;
     --border-color: #353430;
 
