--- a/styles/dark.css
+++ b/styles/dark.css
@@ -28,7 +28,6 @@
   --border-color-hover: rgba(255, 0, 112, 0.40);
 }
 
-
 .page.theme_dark .decoration-element {
   display: block;
 }
@@ -37,9 +36,11 @@
   :root {
     --font-color: #F1B2CE;
     --font-color-description: #000028;
+    --font-color-question: #FF0070;
     --bg-page-img: url(../images/cover-image-dark.png);
     --background-color: #000028;
     --bg-accent-color: #FF0070;
+    --button-text-color: #FF0070;
     --border-color: #FF0070;
 
 
