--- a/styles/light.css
+++ b/styles/light.css
@@ -14,7 +14,7 @@
   --font-color-description: #353430;
   --font-color-question: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
-  --backgraund-color:#FFC2E6;
+  --background-color:#FFC2E6;
   --bg-accent-color: #FF8DCB;
   --button-text-color: #353430;
   --border-color: #353430;
@@ -36,7 +36,7 @@
       --font-color: #353430;
     --font-color-description: #353430;
     --bg-page-img: url(../images/cover-image-light.png);
-    --backgraund-color:#FFC2E6;
+    --background-color:#FFC2E6;
     --bg-accent-color: #FF8DCB;
     --border-color: #353430;
 
