--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
   background-image: var(--bg-page-img);
   background-position: center;
   background-attachment: fixed;
-  background-color: var(--backgraund-color);
+  background-color: var(--background-color);
   background-size: cover;
   width: 100%;
   font-family: "IBM Plex mono", sans-serif;
