--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,7 +13,7 @@
   --font-color: #F1B2CE;
   --font-color-description: #000028;
   --font-color-question: #FF0070;
-  --bg-page-img: url(../images/cover-image-dark.png);
+  --bg-page-img: none;
   --background-color: #000028;
   --bg-accent-color: #FF0070;
   --button-text-color: #FF0070;
@@ -37,7 +37,7 @@
     --font-color: #F1B2CE;
     --font-color-description: #000028;
     --font-color-question: #FF0070;
-    --bg-page-img: url(../images/cover-image-dark.png);
+    --bg-page-img: none;
     --background-color: #000028;
     --bg-accent-color: #FF0070;
     --button-text-color: #FF0070;
