--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,6 +13,12 @@
   --font-color: #F1B2CE;
   --font-color-description: #000028;
   --font-color-question: #FF0070;
+  /*
+  При выполнении автотестов появляется ошибка - 
+  "Тёмная цветовая схема не соответствует макету"
+  и в артефактах было видно, что вместо картинки применяется темная заливка. 
+  Проблему удалось решить только выключением фоновой картинки. Только после этого тесты собрались
+  */
   --bg-page-img: none;
   --background-color: #000028;
   --bg-accent-color: #FF0070;
@@ -35,7 +41,7 @@
 @media(prefers-color-scheme: dark) {
   :root {
     --font-color: #F1B2CE;
-    --font-color-description: #000028;
+    --font-color-description: #000028; 
     --font-color-question: #FF0070;
     --bg-page-img: none;
     --background-color: #000028;
