fix styles.css 146line

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,13 +13,7 @@
   --font-color: #F1B2CE;
   --font-color-description: #000028;
   --font-color-question: #FF0070;
-  /*
-  При выполнении автотестов появляется ошибка - 
-  "Тёмная цветовая схема не соответствует макету"
-  и в артефактах было видно, что вместо картинки применяется темная заливка. 
-  Проблему удалось решить только выключением фоновой картинки. Только после этого тесты собрались
-  */
-  --bg-page-img: none;
+  --bg-page-img: url(../images/cover-image-dark.png);
   --background-color: #000028;
   --bg-accent-color: #FF0070;
   --button-text-color: #FF0070;
