--- a/styles/style.css
+++ b/styles/style.css
@@ -17,13 +17,15 @@
   flex-direction: column;
   justify-content: center;
   container-type: inline-size;
+  /* margin: 0;
+  padding: 0; */
 }
 
 .header {
-  height: 100svh;
+  height: 100vh;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-  container-type: inline-size;
+   container-type: inline-size; 
   padding: 10px;
 }
 
@@ -75,10 +77,10 @@
   display: inline-block;
   width: 9px;
   height: 9px;
-  margin-inline-end: 10px;
+  margin-inline: 10px;
   background-color: var(--bg-accent-color);
   border-radius: 50%;
-  box-shadow: 0px 0px 50px var(--bg-accent-color);
+ box-shadow: 0px 0px 50px var(--bg-accent-color); 
 
 }
 
@@ -116,7 +118,6 @@
 }
 
 .header__theme-menu-button {
-  width: 70px;
   border: none;
   background-color: transparent;
   color: var(--button-text-color);
@@ -128,14 +129,16 @@
 .header__theme-menu-button:hover {
   outline-offset: 1px;
   outline: 1px solid var(--border-color-hover);
+  cursor: pointer;
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--border-color);
+   outline: 1px solid var(--border-color); 
+  pointer-events: none;
 }
 
 .header__theme-menu-button:focus {
-  appearance: none;
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -147,8 +150,12 @@
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 83%;
   color: var(--font-color-title);
-  text-shadow: var(--text-shadow-title);
+  text-shadow:4px 4px 0px var(--text-shadow-title);
   font-weight: 700;
+}
+
+.footer .title{
+  text-shadow:2px 2px 0px var(--text-shadow-title);
 }
 
 .wapper-for-discription {
@@ -183,13 +190,13 @@
 
 
 .main {
-  container-type: inline-size;
+  /* container-type: inline-size; */
   padding-inline: 10px;
 }
 
 .constant-layout {
   display: grid;
-  grid-template-columns: 1 1fr;
+  grid-template-columns: 1fr;
   margin-block-start: 40px;
   margin-block-end: 50px;
 }
@@ -367,7 +374,7 @@
 }
 
 .footer {
-  container-type: inline-size;
+  /* container-type: inline-size; */
   height: 100svh;
   display: flex;
   flex-direction: column;
