--- a/styles/style.css
+++ b/styles/style.css
@@ -192,17 +192,19 @@
     margin-block-end: 50px;
 }
 
-.question {
-    color: var(--font-color-question);
+.primary-title,
+.secondary-title {
     font-size: 1.125rem;
     font-weight: 700;
+
+}
+.primary-title {
+    color: var(--font-color-question);
 }
 
-.main__point {
-    color: var(--font-color-description);
-    font-size: 1.125rem;
-    font-weight: 700;
+.secondary-title {
     background-color: var(--bg-accent-color);
+    color: var(--font-color-description);
     margin-block-start: 20px;
     margin-block-end: 10px;
 }
@@ -243,7 +245,7 @@
         margin-block-end: 80px;
     }
 
-    .main__point {
+    .secondary-title {
         margin-block-start: 0;
     }
 }
