--- a/styles/light.css
+++ b/styles/light.css
@@ -9,6 +9,19 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --font-color: #353430;
+  --font-color-description: #353430;
+  --font-color-question: #353430;
+  --bg-page-img: url(../images/cover-image-light.png);
+  --background-color: #FFC2E6;
+  --bg-accent-color: #FF8DCB;
+  --button-text-color: #353430;
+
+
+  --font-color-title: #FFC2E6;
+  --text-shadow-color: #FF8DCB;
+  --border-color: #353430;
+  --border-color-hover: rgba(50, 49, 45, 0.40);
 }
 
 .page.theme_light .decoration-element {
