--- a/styles/style.css
+++ b/styles/style.css
@@ -74,10 +74,10 @@
     display: inline-block;
     width: 9px;
     height: 9px;
-    margin-inline-end: 10px;
+    margin-inline: 10px;
     background-color: var(--bg-accent-color);
     border-radius: 50%;
-    box-shadow: 0px 0px 50px var(--bg-accent-color);
+    box-shadow: 0 0 4px 3px  var(--bg-accent-color);
 
 }
 
@@ -135,7 +135,7 @@
 }
 
 .header__theme-menu-button:focus {
-    appearance: none;
+    outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -147,8 +147,12 @@
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     line-height: 83%;
     color: var(--font-color-title);
-    text-shadow: var(--text-shadow-title);
+    text-shadow: 4px 4px 0 var(--text-shadow-color);
     font-weight: 700;
+}
+
+.footer .title {
+    text-shadow: 2px 2px 0 var(--text-shadow-color);
 }
 
 .wapper-for-discription {
@@ -180,32 +184,49 @@
     }
 }
 
+.section {
+    margin-block-start: 50px;
+}
+.section:first-child {
+    margin-block-start: 40px;
+}
+
+@media (width >= 768px) {
+    .section {
+        margin-block-start: 80px;
+    }
+    .section:first-child{
+        margin-block-start: 60px;
+    }
+}
 
 .main {
     padding-inline: 10px;
 }
 
-.constant-layout {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-block-start: 40px;
-    margin-block-end: 50px;
-}
-
 .primary-title,
-.secondary-title {
+.secondary-title,
+.minor-title {
     font-size: 1.125rem;
     font-weight: 700;
-
+    margin-block-start: 20px;
+    margin-block-end: 10px;
 }
+
 .primary-title {
     color: var(--font-color-question);
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
-.secondary-title {
+.secondary-title,
+.minor-title {
     background-color: var(--bg-accent-color);
     color: var(--font-color-description);
-    margin-block-start: 20px;
+}
+
+.minor-title {
+    font-weight: 400;
     margin-block-end: 10px;
 }
 
@@ -231,90 +252,57 @@
     outline: 1px solid var(--font-color);
 }
 
+
+.constant-layout,
+.changeable-layout {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 @media (width >= 768px) {
     .main {
         padding-inline: 20px;
     }
 
     .constant-layout {
-        display: grid;
         grid-template-columns: 1fr 2fr;
-        grid-template-rows: auto;
         gap: 20px;
-        margin-block-start: 60px;
-        margin-block-end: 80px;
+    }
+
+    .changeable-layout {
+        grid-template-rows: auto 1fr;
+        gap: 20px;
     }
 
     .secondary-title {
         margin-block-start: 0;
     }
-}
 
-.changable-layout {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-block-end: 50px;
-}
-
-@media (width >= 768px) {
-    .changable-layout {
-        display: grid;
-        grid-template-rows: auto 1fr;
-        gap: 20px;
-        margin-block-end: 80px;
-    }
-
-    .question-wraper {
+    .changeable-layout .primary-title {
         width: 30%;
     }
 }
 
 @media (width >= 1024px) {
-    .changable-layout {
-        display: grid;
+    .constant-layout,
+    .changeable-layout {
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto 1fr;
-        gap: 20px;
     }
 
-    .question-wraper {
+    .constant-layout .section-content {
+        grid-column: 2 / span 2;
+    }
+
+    .changeable-layout .primary-title {
         grid-column: 1 / span 3;
     }
-}
-
-.advise {
-    color: var(--font-color-description);
-    font-size: 1.125rem;
-    font-weight: 700;
-    background-color: var(--bg-accent-color);
-    margin-block-start: 20px;
-    margin-block-end: 10px;
-}
-
-.normal-text {
-    font-weight: normal;
-}
-
-@media (width >= 768px) {
-    .advise {
-        margin-block-start: 0;
-        margin-block-end: 20px;
-    }
-}
-
-.question-and-main-point {
-    color: var(--font-color-description);
-    font-size: 1.125rem;
-    font-weight: 700;
-    background-color: var(--bg-accent-color);
-    margin-block-start: 50px;
-    margin-block-end: 10px;
 }
 
 .pictures {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
+    margin-block-start: 10px;
     margin-block-end: 40px;
 }
 
@@ -323,15 +311,11 @@
 }
 
 @media (width >= 768px) {
-    .question-and-main-point {
-        margin-block-start: 80px;
-        margin-block-end: 20px;
-    }
-
     .pictures {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto auto auto;
         gap: 20px;
+        margin-block-start: 20px;
         margin-block-end: 60px;
     }
 
