--- a/styles/light.css
+++ b/styles/light.css
@@ -13,7 +13,7 @@
   --font-color-description: #353430;
   --font-color-question: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
-  --background-color: #FFF1F7;
+  --background-color: none;
   --bg-accent-color: #FF8DCB;
   --button-text-color: #353430;
 
